<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="skip_text">Skip</string>
    <string name="title_notifications">Notifications</string>
    <string name="page1_title_text">ENROL EXAM</string>
    <string name="page1_sub_title_text">apply exams instantly and get high scores to improve your skills</string>
    <string name="page2_title_text">COMPETE WITH OTHER</string>
    <string name="page2_sub_title_text">increase your score and get high ranked follow the results of your friends and compete with them</string>
    <string name="page3_title_text">START EXPLORING</string>
    <string name="page3_sub_title_text">discover your capability by solving issues and create opportunity to find out your lack of knowledge and filling it</string>
    <string name="sign_in_title">Hello Again! Welcome back</string>
    <string name="sign_in">Sign in</string>
    <string name="number">Phone Number or email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_pass"><u>Forget Password</u></string>
    <string name="sign_up_in_sign_in"><u>Sign Up</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="sign_up_title">Hello! SignUp to get started</string>
    <string name="confrim_restore_pass_title">We sent confirmation to</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="restore_pass_title">Hello! Enter your new password</string>
    <string name="confirm">Confirm</string>
    <string name="overview">Overview</string>
    <string name="exam_title">Exam Subjects</string>
    <string name="exam">Exams</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="success">Successfully</string>
    <string name="passed_exam">passed exams</string>
    <string name="uploaded_exam">uploaded exams</string>
    <string name="valet">Your wallet</string>
    <string name="your_ranking">Your Ranking</string>
    <string name="history">History</string>
    <string name="problems">problems</string>
    <string name="id">#ID</string>
    <string name="address">Address</string>
    <string name="rank">Rank</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ranking">Ranking</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>
    <string name="lang">Language</string>
    <string name="pocket">Your Pocket</string>
    <string name="about">About</string>
    <string name="surename">Surename</string>
    <string name="region">Region</string>
    <string name="change_pass">Change Password</string>
    <string name="random_exam">Random Exam</string>
    <string name="custom_exam">Custom Exam</string>
    <string name="start_exam">Start Exam</string>
    <string name="error">Error</string>
    <string name="error_msg">Select at least one option</string>
    <string name="online_exam">Solve Exam Online</string>
    <string name="online_exam_msg">In this option you can solve  problems. You will have 1 hour to answer the questions. Once you finished the quiz you will get answers. After starting  test you cannot back. Make sure  that you are in quite place and without any disturbances</string>
    <string name="download_exam">Download Exam</string>
    <string name="download_exam_msg">In this option you can  download the generated question sheet you can solve it any time you want. Downloaded question sheet will not be checked you might get answer in online option</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="question">Question</string>
    <string name="question_ends_msg">Question sheet will close after</string>
    <string name="correct">Correct</string>
    <string name="mistakes">Mistakes</string>
    <string name="correct_msg">answered correctly</string>
    <string name="mistakes_msg">answers are mistaken</string>
    <string name="start">Start</string>
    <string name="your_wallet">Your Wallet:</string>
    <string name="most_popular">Most Popular</string>
    <string name="see_all">See all</string>
    <string name="ijtimoiy">Ijtimoiy Fanlar</string>
    <string name="texnika_fanlar">Texnika Fanlar</string>
    <string name="matematika">Matematika</string>
    <string name="ona_tili">Ona Tili</string>
    <string name="tarix">Tarix</string>
    <string name="your_result">Your Result</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="statistics">Statistics</string>
</resources>