<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".confimation_number"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<!--    style="@style/confirmation_number">-->


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/confirm_number_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_btn_confirmation"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_chevron_back_outline"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/back_icon_mode"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="220dp"
        style="@style/right_side_title"
        android:text="@string/confrim_restore_pass_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TableLayout
        android:id="@+id/confirmation_numbers_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TableRow>
            <EditText
                android:id="@+id/first_conf_num"
                style="@style/numpad_edit_keyboard"
                />
            <EditText
                android:id="@+id/second_conf_num"
                style="@style/numpad_edit_keyboard"
                />
            <EditText
                android:id="@+id/third_conf_num"
                style="@style/numpad_edit_keyboard"
                />
            <EditText
                android:id="@+id/four_conf_num"
                style="@style/numpad_edit_keyboard"
                />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/numpad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_numbers_row">

        <TableRow>
            <TextView
                android:id="@+id/one_btn"
                style="@style/numpad_keyboard"
                android:text="@string/one"
                />
            <TextView
                android:id="@+id/two_btn"
                style="@style/numpad_keyboard"
                android:text="@string/two"
                />
            <TextView
                android:id="@+id/three_btn"
                style="@style/numpad_keyboard"
                android:text="@string/three"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/four_btn"
                style="@style/numpad_keyboard"
                android:text="@string/four"
                />
            <TextView
                android:id="@+id/five_btn"
                style="@style/numpad_keyboard"
                android:text="@string/five"
                />
            <TextView
                android:id="@+id/six_btn"
                style="@style/numpad_keyboard"
                android:text="@string/six"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/seven_btn"
                style="@style/numpad_keyboard"
                android:text="@string/seven"
                />
            <TextView
                android:id="@+id/eight_btn"
                style="@style/numpad_keyboard"
                android:text="@string/eight"
                />
            <TextView
                android:id="@+id/nine_btn"
                style="@style/numpad_keyboard"
                android:text="@string/nine"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/blank_btn"
                style="@style/numpad_keyboard"
                />
            <TextView
                android:id="@+id/zero_btn"
                style="@style/numpad_keyboard"
                android:text="@string/zero"
                />
            <ImageView
                android:id="@+id/backspace_img"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_backspace_outline"
                style="@style/backspace_icon_mode"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>