<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".sign_in"
    style="@style/sign_in_bkg">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="220dp"
        style="@style/left_side_title"
        android:text="@string/sign_in_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/sign_in_login"
        style="@style/textfield"
        android:hint="@string/number"
        app:layout_constraintVertical_bias="0.35"
        android:background="@drawable/rounded_border_shadow_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/sign_in_pass"
        style="@style/textfield"
        android:hint="@string/password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_login" />

    <Button
        android:id="@+id/sign_in_btn"
        style="@style/button_fill"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_pass" />

    <TextView
        android:id="@+id/fotget_pass_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textColor="@color/primary_color"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

    <TextView
        android:id="@+id/sign_up_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_up_in_sign_in"
        android:textColor="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fotget_pass_option"
        app:layout_constraintTop_toTopOf="@+id/fotget_pass_option"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.9"/>


</androidx.constraintlayout.widget.ConstraintLayout>