<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".sign_up"
    style="@style/sign_up_bkg">

    <ImageView
        android:id="@+id/back_btn_sign_up"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_chevron_back_outline"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/back_icon_mode"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        style="@style/right_side_title"
        android:text="@string/sign_up_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/asd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.15" />

    <ImageButton
        android:id="@+id/edit_profile_img_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/circle_bkg_fill"
        android:src="@drawable/ic_edit"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:tint="@color/white" />

    <EditText
        android:id="@+id/sign_up_name"
        style="@style/textfield"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/sign_in_login"
        style="@style/textfield"
        android:hint="@string/number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_name"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/sign_up_pass"
        style="@style/textfield"
        android:hint="@string/password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_login" />
    <EditText
        android:id="@+id/sign_up_confirm_pass"
        style="@style/textfield"
        android:hint="@string/confirm_pass"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_pass" />

    <Button
        android:id="@+id/sign_up_btn"
        style="@style/button_fill"
        android:text="@string/sign_up"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>